--- a/index.html
+++ b/index.html
@@ -106,29 +106,29 @@
         function getLeftOrRightHanded()
         {
             let data = jsPsych.data.get().select('survey_multi_choice_responses');
-            data = JSON.parse(data.values[0])
+            data = JSON.parse(data.values[0]);
             return data.HandPreference;
         }
 
         function getCorrectKey()
         {
             let handed = getLeftOrRightHanded().toLowerCase();
-            return KEYBOARD_DEFAULTS[chosen_keyboard][handed + '_key']
+            return KEYBOARD_DEFAULTS[chosen_keyboard][handed + '_key'];
         }
 
         function getIncorrectKey()
         {
             let handed = getLeftOrRightHanded().toLowerCase();
             // If left handed, use right. Otherwise, use left.
-            let incorrect_key = (handed == 'left' ? 'right' : 'left') + '_key'
-            return KEYBOARD_DEFAULTS[chosen_keyboard][incorrect_key]
+            let incorrect_key = (handed == 'left' ? 'right' : 'left') + '_key';
+            return KEYBOARD_DEFAULTS[chosen_keyboard][incorrect_key];
         }
 
         //simple version, single digit input, not a list
         function upperCaseFromASCII(keycode)
         {
             character = String.fromCharCode(keycode);
-            return(character.toUpperCase());
+            return character.toUpperCase();
         }
 
         // data one would like to add to __all__ trials, according to:
@@ -136,18 +136,17 @@
         let subject_id = jsPsych.randomization.randomID(8);
         let group_name = stimuli.group_name;
 
-        jsPsych.data.addProperties(
-            {
-                subject: subject_id,
-                group: group_name,
-            });
+        jsPsych.data.addProperties({
+            subject: subject_id,
+            group: group_name,
+        });
 
 
         let start_screen = {
             type: 'html-button-response',
             stimulus: function(){
                 return "<div class='instruction' >" +
-                    '<p>' + GENERIC_CHECK + '</p></div>';
+                       "<p>" + GENERIC_CHECK + "</p></div>";
             },
             choices: [OK_BUTTON_TEXT],
             response_ends_trial: true
@@ -178,10 +177,8 @@
                 </div>
                 `,
             on_finish: function(data){
-
                 var survey_html_responses = data.responses;
                 data.survey_html_responses = survey_html_responses;
-
             }
         };
 
@@ -251,7 +248,7 @@
 
                 return `
                     <h1>Your data</h1>
-                    <p>
+
                     <div><strong>Birth year</strong>: ${b_year} </div>
                     <div><strong>Birth month</strong>: ${b_month} </div>
                     <div><strong>Native language</strong>: ${n_lang} </div>
@@ -259,25 +256,25 @@
                     <div><strong>Dyslexic</strong>: ${dyslexic} </div>
                     <div><strong>Gender</strong>: ${gender} </div>
                     <div><strong>Hand preference</strong>: ${hand_pref} </div>
-                    </p>
+
                     <BR><BR>
                     <p>Is this information correct?</p>
-                    ` 
+                    `;
             },
             choices: YES_OR_NO_BUTTON_TEXT,
             response_ends_trial: true,
             on_finish: function(data){
                 // Repeat the survey if yes (0) was not pressed
-                repeat_survey = data.button_pressed != 0
+                repeat_survey = data.button_pressed != 0;
             }
         };
 
         let select_keyboard_layout = {
             type: 'html-button-response',
-            stimulus: '<h2>Choose the keyboardlayout that looks most like yours</h2>',
+            stimulus: '<h2>Choose the keyboard layout that looks most like yours</h2>',
             choices: KEYBOARD_CHOICES,
             prompt: `
-                Focus on the first 6 <b>letters</b> in the top left of your 
+                Focus on the first 6 <strong>letters</strong> in the top left of your
                 keyboard layout if you're unsure.
                 `,
             button_html: `
@@ -293,13 +290,15 @@
             }
         };
 
+        //////////// left key setting & validation /////////////////////////
+
         let test_keyboard_key_left = {
             type: 'html-keyboard-response',
             stimulus: function(){
-                return "<class='stimulus' >" +
-                    '<p>Press the <kbd>' + 
-                    KEYBOARD_DEFAULTS[chosen_keyboard]['left_key'] + 
-                    '</kbd> key on your keyboard.</p>'
+                return "<class='stimulus'>" +
+                       "<p>Press the <kbd>" +
+                        KEYBOARD_DEFAULTS[chosen_keyboard]['left_key'] +
+                       "</kbd> key on your keyboard.</p>";
             },
             choices: jsPsych.ALL_KEYS,
             response_ends_trial: true,
@@ -310,11 +309,7 @@
                 trial_phase: 'test_keyboard_key_left'
             },
             loop_function: function(data){
-                if (repeat_validate_left_key == true){
-                    return true
-                } else {
-                    return false
-                }
+                return repeat_validate_left_key;
             },
             on_finish: function(data) {
                 let expected_key_press = 
@@ -328,11 +323,9 @@
                 data.key_chosen_ascii = key_chosen_ascii;
                 data.key_chosen_char = key_chosen_char;
 
-                if (data.key_confirmed == true){
-                    left_key_confirmed = true;
-                } else {
-                    left_key_confirmed = false;
-                }
+                // We use === instead of a straight assignment to ensure we
+                // don't get undefined as a value
+                left_key_confirmed = data.key_confirmed === true;
             }
         };
 
@@ -342,8 +335,8 @@
                 let wanted_key = KEYBOARD_DEFAULTS[chosen_keyboard]['left_key'];
                 let chosen_key = jsPsych.data.getLastTrialData().values()[0].key_chosen_char;
                 return "<p> You were asked to press: " + wanted_key + "<BR><BR>" + 
-                    "You pressed: " + chosen_key + 
-                    "<BR><BR>Try again, please...</p>"
+                       "You pressed: " + chosen_key +
+                       "<BR><BR>Try again, please...</p>";
             },
             choices: [OK_BUTTON_TEXT]
         };
@@ -351,7 +344,7 @@
         let if_key_left_node = {
             timeline: [if_validated_key_left_feedback_needed],
             conditional_function: function(){
-                if (left_key_confirmed == true){
+                if (left_key_confirmed === true){
                     repeat_validate_left_key = false;
                     return false;
                 } else {
@@ -361,15 +354,15 @@
             }
         };
 
-        //////////// right key setting&validation /////////////////////////
+        //////////// right key setting & validation /////////////////////////
 
         let test_keyboard_key_right = {
             type: 'html-keyboard-response',
             stimulus: function(){
                 return "<class='stimulus' >" +
-                    '<p>Press the <kbd>' + 
-                    KEYBOARD_DEFAULTS[chosen_keyboard]['right_key'] + 
-                    '</kbd> key on your keyboard.</p>'
+                       "<p>Press the <kbd>" +
+                        KEYBOARD_DEFAULTS[chosen_keyboard]['right_key'] +
+                       "</kbd> key on your keyboard.</p>";
             },
             choices: jsPsych.ALL_KEYS,
             response_ends_trial: true,
@@ -389,29 +382,27 @@
                 data.key_confirmed = data.key_press == expected_key_press;
                 data.key_chosen_ascii = key_chosen_ascii;
                 data.key_chosen_char = key_chosen_char;
-                //overly verbose, but testing
-                if (data.key_confirmed == true){
-                    right_key_confirmed = true;
-                } else {
-                    right_key_confirmed = false;
-                }
+
+                // We use === instead of a straight assignment to ensure we
+                // don't get undefined as a value
+                right_key_confirmed = data.key_confirmed === true;
             }
         };
 
-        var if_validated_key_right_feedback_needed = {
+        let if_validated_key_right_feedback_needed = {
             type: 'html-button-response',
             stimulus: function() {
                 let wanted_key = KEYBOARD_DEFAULTS[chosen_keyboard]['right_key'];
                 let chosen_key = 
                     jsPsych.data.getLastTrialData().values()[0].key_chosen_char;
                 return "<p> You were asked to press: " + wanted_key + "<BR><BR>" + 
-                    "You pressed: " + chosen_key + 
-                    "<BR><BR>Try again, please...</p>"
+                       "You pressed: " + chosen_key +
+                       "<BR><BR>Try again, please...</p>";
             },
             choices: [OK_BUTTON_TEXT]
         };
 
-        var if_key_right_node = {
+        let if_key_right_node = {
             timeline: [if_validated_key_right_feedback_needed],
             conditional_function: function(){
                 if (right_key_confirmed == true){
@@ -424,14 +415,14 @@
             }
         };
 
-        var instruction_screen_practice = {
+        let instruction_screen_practice = {
             type: 'html-button-response',
             stimulus: function(){
                 let text = PRE_PRACTICE_INSTRUCTION;
                 text = text.replace('%correct_key%', getCorrectKey());
                 text = text.replace('%incorrect_key%', getIncorrectKey());
                 return "<div class='instruction' >" +
-                    '<p>' + text + '</p></div>';
+                       "<p>" + text + "</p></div>";
             },
             choices: [OK_BUTTON_TEXT],
             response_ends_trial: true,
@@ -462,11 +453,11 @@
             trial_duration: FIXCROSS_DURATION
         };
 
-        var present_prime = {
+        let present_prime = {
             type: 'html-keyboard-response',
             stimulus: function(){
                 return "<p class='stimulus'>" + 
-                    jsPsych.timelineVariable('prime', true) + "</p>";
+                       jsPsych.timelineVariable('prime', true) + "</p>";
             },
             choices: jsPsych.NO_KEYS,
             trial_duration: PRIME_DURATION,
@@ -519,21 +510,27 @@
                 prime: jsPsych.timelineVariable('prime'),
                 id: jsPsych.timelineVariable('id'),
                 trial_phase: 'present_word',
-                useful_data_flag: true
+                useful_data_flag: true,
             },
             on_finish: function(data){
                 let correct_key = getCorrectKey()
                 let incorrect_key = getIncorrectKey();
-                if(data.condition == 'RELATED'){
-                    var correct = data.key_press == 
-                        jsPsych.pluginAPI.convertKeyCharacterToKeyCode(correct_key);
-                } else if (data.condition == 'UNRELATED'){
-                    var correct = data.key_press == 
-                        jsPsych.pluginAPI.convertKeyCharacterToKeyCode(correct_key);
-                } else {
-                    var correct = data.key_press == 
-                        jsPsych.pluginAPI.convertKeyCharacterToKeyCode(incorrect_key);
+                let correct;
+
+                // Alias this function for readability
+                let convertToKeyCode = jsPsych.pluginAPI.convertKeyCharacterToKeyCode
+
+                switch (data.condition)
+                {
+                    case 'RELATED':
+                    case 'UNRELATED':
+                        correct = data.key_press == convertToKeyCode(correct_key);
+                        break;
+                    default:
+                        correct = data.key_press == convertToKeyCode(incorrect_key);
+                        break;
                 }
+
                 data.correct = correct;
             }
         };
@@ -541,10 +538,10 @@
         let present_feedback = {
             type: 'html-keyboard-response',
             stimulus: function() {
-                let feedback_text ='<span style="color:red;font-size:30px;">Incorrect</span>';
+                let feedback_text = '<span style="color:red;font-size:30px;">Incorrect</span>';
                 let last_resp_acc = jsPsych.data.getLastTrialData().values()[0].correct;
                 if (last_resp_acc == true) {
-                    feedback_text = '<span style="color:green;font-size:30px;">Correct!</span>'
+                    feedback_text = '<span style="color:green;font-size:30px;">Correct!</span>';
                 }
                 return feedback_text;
             },
@@ -564,11 +561,11 @@
                 if (repeat_survey == true){
                     // Remove any previously recorded data, to prevent
                     // duplicate entries
-                    jsPsych.data.reset()
+                    jsPsych.data.reset();
 
-                    return true
+                    return true;
                 } else {
-                    return false
+                    return false;
                 }
             }
         };
@@ -579,11 +576,7 @@
                 if_key_left_node,
             ],
             loop_function: function(){
-                if (repeat_validate_left_key == true){
-                    return true
-                } else {
-                    return false
-                }
+                return repeat_validate_left_key === true;
             }
         }; 
 
@@ -593,11 +586,7 @@
                 if_key_right_node,
             ],
             loop_function: function(){
-                if (repeat_validate_right_key == true){
-                    return true
-                } else {
-                    return false
-                }
+                return repeat_validate_right_key === true;
             }
         }; 
 
@@ -606,10 +595,10 @@
                 present_fixation,
                 present_prime,
                 present_word,
-                present_feedback
+                present_feedback,
             ],
             timeline_variables: getPracticeItems().table,
-            randomize_order: false
+            randomize_order: false,
         };
 
         let trial_procedure_pseudorandom = {
@@ -618,8 +607,11 @@
                 present_prime,
                 present_word,
             ],
-            timeline_variables: uil.randomization.randomizeStimuli(stimuli.table, 
-                MAX_SUCCEEDING_ITEMS_OF_TYPE, 'item_type'),
+            timeline_variables: uil.randomization.randomizeStimuli(
+                stimuli.table,
+                MAX_SUCCEEDING_ITEMS_OF_TYPE,
+                'item_type',
+            ),
             randomize_order: false // this should be false if uil randomization is used...
         };
 
@@ -658,25 +650,23 @@
         // NOTE options below! comment/uncomment for regular vs restrained randomization
         // true randomness is better for the current template's amount of items...
 
-        //timeline.push(trial_procedure_pseudo_random);// don't do this with little stimuli
+        //timeline.push(trial_procedure_pseudo_random); // don't do this with little stimuli
         timeline.push(trial_procedure_random);
         timeline.push(end_screen);
 
         // Start jsPsych when running on a Desktop or Laptop style pc.
         if (! uil.isMobileOrTablet()) {
-            jsPsych.init(
-                {
-                    timeline: timeline,
-                    exclusions: {
-                        min_width: MIN_WIDTH,
-                        min_height: MIN_HEIGHT
-                    },
-                    on_finish: function() {
-                        // the 'true' parameter is needed only for the acc. server
-                        uil.saveData(ACCESS_KEY, true);
-                    }
+            jsPsych.init({
+                timeline: timeline,
+                exclusions: {
+                    min_width: MIN_WIDTH,
+                    min_height: MIN_HEIGHT
+                },
+                on_finish: function() {
+                    // the 'true' parameter is needed only for the acc. server
+                    uil.saveData(ACCESS_KEY, true);
                 }
-            )
+            });
         }
         else { // or bail out.
             let paragraph = document.createElement("p")
