--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     
-    <title>Primed Lexical Decision Experiment</title>
+    <title>Visual Lexical Decision Experiment with Visual Prime</title>
 
     <script src="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/jspsych.js"></script>
     <script src="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
