consent flow that may adhere to the difficult specs of https://github.com/UiL-OTS-labs/jspsych-vislexdec-vp/issues/14 and a song to celebrate https://www.youtube.com/watch?v=1o4s1KVJaVA

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         function getLeftOrRightHanded()
         {
             let data = jsPsych.data.get().select('survey_multi_choice_responses');
-            console.log(data);
+            //console.log(data);
             data = JSON.parse(data.values[0]);
             return data.HandPreference;
         }
@@ -566,7 +566,8 @@
         //timeline.push(consent_trial);
 
         //timeline.push(consent_page);
-        timeline.push(consent_block);
+        //timeline.push(consent_block);
+        timeline.push(consent_procedure);
 
         // survey
         timeline.push(survey_procedure);
