Fixed an issue from e-mail; take _last_ handpref a bit of work on my day off, why not?

--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
 
         // prep stimuli
         let stimuli = pickRandomGroup();
+        var handpref = undefined;
 
         // regular JS functions
         function getLeftOrRightHanded()
         {
-            let data = jsPsych.data.get().select('survey_multi_choice_responses');
-            data = JSON.parse(data.values[0]);
-            return data.HandPreference;
+            let surveydata = jsPsych.data.get().select('survey_multi_choice_responses');
+            let datavalues = surveydata.values;
+            let lastdatavalues = datavalues[datavalues.length - 1];
+            let parsedvalues = JSON.parse(lastdatavalues);
+            handpref = parsedvalues.HandPreference;
+            return(parsedvalues.HandPreference);
         }
 
         function getCorrectKey()
