--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
                     min_height: MIN_HEIGHT
                 },
                 on_finish: function() {
-                    // the 'true' parameter is needed only for the acc. server
-                    uil.saveData(ACCESS_KEY, true);
+                    uil.saveData(ACCESS_KEY);
                 }
             });
         }
