Lists are the new groups.
i predict a big future for lists ;-)

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     window.addEventListener('load', function() {
 
         // prep stimuli
-        let stimuli = pickRandomGroup();
+        let stimuli = pickRandomList();
+        
         var handpref = undefined;
 
         // regular JS functions
