--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@
          });
      }
 
+     function pickRandomList() {
+         let range = function (n) {
+             let empty_array = [];
+             let i;
+             for (i = 0; i < n; i++) {
+                 empty_array.push(i);
+             }
+             return empty_array;
+         }
+         let num_lists = TEST_ITEMS.length;
+         var shuffled_range = jsPsych.randomization.repeat(range(num_lists), 1);
+         var retlist = TEST_ITEMS[shuffled_range[0]];
+         return retlist;
+     }
+
      function findList(name) {
          let list = TEST_ITEMS.find((entry) => entry.list_name === name);
          if (!list) {
