--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
          // let stimuli = pickRandomList();
          // initExperiment(stimuli);
 
-         // Option 2: server side randomization:
+         // Option 2: server side balancing:
          uil.session.start(ACCESS_KEY, (group_name) => {
              let stimuli = findList(group_name);
              initExperiment(stimuli);
