Change correct_response in expected_response
fixes #26

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 id: jsPsych.timelineVariable('id'),
                 trial_phase: 'present_word',
                 useful_data_flag: true,
-                correct_response: jsPsych.timelineVariable('correct')
+                expected_answer: jsPsych.timelineVariable('expected_response')
             },
             on_finish: function(data){
                 let convertToKeyCode = jsPsych.pluginAPI.convertKeyCharacterToKeyCode
@@ -351,7 +351,7 @@
                 } else { 
                     answer = undefined;
                 };
-                correct = answer == data.correct_response;
+                correct = answer == data.expected_answer;
                 data.correct = correct;
                 data.integer_correct = data.correct ? 1 : 0;
                 data.key_chosen_ascii = key_chosen_ascii;
