use expected_answer everywhere
Now the stimuli had expected_answer and expected_response
fixes #26

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 id: jsPsych.timelineVariable('id'),
                 trial_phase: 'present_word',
                 useful_data_flag: true,
-                expected_answer: jsPsych.timelineVariable('expected_response')
+                expected_answer: jsPsych.timelineVariable('expected_answer')
             },
             on_finish: function(data){
                 let convertToKeyCode = jsPsych.pluginAPI.convertKeyCharacterToKeyCode
